# esmjax

./: README.md  convert_esm_weights.py  create_esm_dataset.sh  create_esm_dataset_hdf5.py  example.py  example_dataloader.py  example_sharded.py  extract_uniref90_cluster_names.py  merge_hdf5.py  mutagen.yml  pyproject.toml  train.py
esmjax/: data.py  tokenizer.py  utils.py
esmjax/modules/: models.py  multihead_attention.py
